force-app/main/default/objects/Achievement__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Disables the achievement and all related logic. Removes achievement from Leaderboards.</description>
    <inlineHelpText>Default value: Checked</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>