force-app/main/default/objects/Achievement__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <description>Numerical value representing a goal number that has to be reached for achievement to be tracked as &quot;Reached&quot; by the user</description>
    <label>Goal</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>