force-app/main/default/objects/Achievement__c/fields/Measurement__c.field-meta.xml
<CustomField>
    <fullName>Measurement__c</fullName>
    <label>Measurement</label>
    <referenceTo>Measurement__c</referenceTo>
    <relationshipLabel>Achievements</relationshipLabel>
    <relationshipName>Achievements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>