force-app/main/default/objects/Achievement__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of points that user gets, once reaching the achievement. Used to calculate high-score on the leaderboard</description>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>