force-app/main/default/objects/Achievement__c/listViews/All_Achievements.listView-meta.xml
<ListView>
    <fullName>All_Achievements</fullName>
    <columns>NAME</columns>
    <columns>UITitle__c</columns>
    <columns>UIDescription__c</columns>
    <columns>Enabled__c</columns>
    <columns>Measurement__c</columns>
    <columns>Goal__c</columns>
    <columns>Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Achievements</label>
</ListView>